# YIELD-HUB

./: .env.sample  .gitignore  README.md  cybench_compat.py  environment.yml  pyproject.toml  requirements.txt
architectures/: linearLayer.py  modelconfig.py  trendLayer.py  tstLayer.py
process/: alignment_patch.py  eb_criterion.py  featureEngineering.py  helpers.py  hpo.py  hpoOptuna.py  loadData.py  validateModel.py
setups/configurations/: eosHyperparameters.json  mosHyperparameters.json  years_dict.json
setups/hpo-octuna/: find_hpo.sh  linearBaselines.py  tstBaselines.py
setups/temporal/: hpo_training.sh  linearBaselines.py  run_baselines.sh  tstBaselines.py
setups/walk-forward/: generate_walk_forward_tasks.sh  linearBaselines.py  tstBaselines.py  walk_forward.sh  walk_forward_array.slurm  walk_forward_env.sh  walk_forward_one.slurm  walk_forward_submit.sh  walk_forward_test.slurm
train/: linearBaselines.py  run_baselines.sh  trendBaseline.py  tstBaselines.py
train/hpo/: find_hpo.sh  linearBaselines.py  tstBaselines.py
train/temporal/: hpo_training.sh  linearBaselines.py  run_baselines.sh  statisticalBaselines.py  tstBaselines.py
train/walk-forward/: linearBaselines.py  test.txt  tstBaselines.py
train/walk-forward/checkpoints-test/results/: wheat_NL_walkforward_20260518_173341_787b3525.csv  wheat_NL_walkforward_20260518_174509_046d534f.csv  wheat_NL_walkforward_20260518_175132_a288738e.csv  wheat_NL_walkforward_aggregated_20260518_173341_787b3525.csv  wheat_NL_walkforward_aggregated_20260518_174509_046d534f.csv  (+1 more)
wrappers/: __init__.py  generate_predictions.ipynb  generate_predictions.py  hf_artifacts.py
yield_hub/: __init__.py  artifacts.py  cli.py  dashboard.py  data.py  predictor.py  settings.py  validation.py
(+34 files in other folders)
